Change index page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,9 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <p>
+      <br />
+      <a href="/posts">Post a blog</a>
+    </p>
   </body>
 </html>
